--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
+
+    <base href='/'>
   </head>
-  
+
   <!-- 3. Display the application -->
   <body>
     <my-app>Loading...</my-app>
