--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       System.import('app').catch(function(err){ console.error(err); });
     </script>
 
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+
     <base href='/'>
   </head>
 
